# wasm-avif

./: Cargo.toml  README.md  build.sh
example/avif/: package-lock.json  package.json
example/avif/src/: main.ts
main/: package-lock.json  package.json  vite.config.js
main/src/: index.js  worker.js  worker_bg.js
src/: lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
