[package]
name = "wasm-avif"
version = "0.1.0-alpha.2"
description = "avif encoder"
authors = ["gitigi <stephengitigi@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gitigi/wasm-avif"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
ravif = { version = "0.11" }
imgref = "1.9.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 'z'
# strip = true
panic = "abort"
codegen-units = 1

# [package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.profiling]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
